--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@sentry/react": "^7.13.0",
     "@sentry/tracing": "^7.13.0",
+    "@szhsin/react-menu": "^3.1.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.1",
