--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-select": "^5.4.0",
     "redux-persist": "^6.0.0",
     "typescript": "^4.6.0",
+    "utility-types": "^3.10.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
