--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@changey/react-leaflet-markercluster": "^4.0.0-rc1",
     "@reduxjs/toolkit": "^1.8.1",
     "@sentry/react": "^7.13.0",
     "@sentry/tracing": "^7.13.0",
@@ -15,12 +16,14 @@
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "classnames": "^2.3.2",
+    "leaflet": "^1.9.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -52,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.8.0",
     "@types/lodash": "^4.14.185",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
