--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
+    "react-tooltip-lite": "^1.12.0",
     "redux-persist": "^6.0.0",
     "typescript": "^4.6.0",
     "utility-types": "^3.10.0",
