--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.1.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
