--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "classnames": "^2.3.2",
+    "dompurify": "^2.4.1",
     "leaflet": "^1.9.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -58,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dompurify": "^2.4.0",
     "@types/leaflet": "^1.8.0",
     "@types/lodash": "^4.14.185",
     "eslint-config-prettier": "^8.5.0",
