--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "@types/react-modal": "^3.13.1",
     "classnames": "^2.3.2",
     "leaflet": "^1.9.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.1.0",
+    "react-modal": "^3.16.1",
     "react-password-strength-bar": "^0.4.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.1",
@@ -34,7 +37,8 @@
     "redux-persist": "^6.0.0",
     "typescript": "^4.6.0",
     "utility-types": "^3.10.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
