--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
-    "sass": "^1.54.9"
+    "sass": "^1.54.9",
+    "ts-deep-pick": "^0.2.2",
+    "type-fest": "^3.2.0"
   }
 }
