--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@changey/react-leaflet-markercluster": "^4.0.0-rc1",
+    "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.8.1",
     "@sentry/react": "^7.13.0",
     "@sentry/tracing": "^7.13.0",
@@ -38,7 +39,7 @@
     "typescript": "^4.6.0",
     "utility-types": "^3.10.0",
     "web-vitals": "^2.1.0",
-    "yup": "^0.32.11"
+    "yup": "^1.0.0-beta.8"
   },
   "scripts": {
     "start": "react-scripts start",
