--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.2",
     "@types/react-modal": "^3.13.1",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.6",
     "dompurify": "^2.4.1",
     "dayjs": "^1.11.6",
     "leaflet": "^1.9.2",
