--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "react-select": "^5.4.0",
     "react-tooltip-lite": "^1.12.0",
     "redux-persist": "^6.0.0",
+    "source-map-explorer": "^2.5.3",
     "typescript": "^4.6.0",
     "utility-types": "^3.10.0",
     "web-vitals": "^2.1.0",
     "yup": "^1.0.0-beta.8"
   },
   "scripts": {
+    "preanalyze": "yarn build",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
