--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.2",
     "@types/react-modal": "^3.13.1",
     "classnames": "^2.3.2",
+    "dompurify": "^2.4.1",
     "leaflet": "^1.9.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -66,6 +67,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dompurify": "^2.4.0",
     "@types/leaflet": "^1.8.0",
     "@types/lodash": "^4.14.185",
     "eslint-config-prettier": "^8.5.0",
