--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-modal": "^3.13.1",
     "classnames": "^2.3.2",
     "dompurify": "^2.4.1",
+    "dayjs": "^1.11.6",
     "leaflet": "^1.9.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
