--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,md,css,scss}\"",
-    "generate-api": "npx @rtk-query/codegen-openapi ./src/app/services/openapi-config.json"
+    "generate-api": "npx @rtk-query/codegen-openapi ./src/app/services/openapi-config.json",
+    "start-e2e": "PORT=4321 BROWSER=none react-scripts start",
+    "e2e": "cypress run"
   },
   "browserslist": {
     "production": [
@@ -71,6 +73,7 @@
     "@types/dompurify": "^2.4.0",
     "@types/leaflet": "^1.8.0",
     "@types/lodash": "^4.14.185",
+    "cypress": "^12.1.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
