--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
     "generate-api": "npx @rtk-query/codegen-openapi ./src/app/services/openapi-config.json",
     "pree2e": "PORT=3000 BROWSER=none yarn start & wait-on http://localhost:3000",
     "e2e": "cypress run",
-    "poste2e": "sleep 5 && killall node"
+    "poste2e": "sleep 5 && killall node",
+    "generate-translations": "ts-node -O '{\"module\":\"commonjs\"}' bin/generateModelTranslations.ts",
+    "postgenerate-translations": "prettier --write \"src/utils/translations.ts\"",
+    "gt": "yarn generate-translations"
   },
   "browserslist": {
     "production": [
@@ -80,7 +83,9 @@
     "prettier": "^2.7.1",
     "sass": "^1.54.9",
     "ts-deep-pick": "^0.2.2",
+    "ts-node": "^10.9.1",
     "type-fest": "^3.2.0",
-    "wait-on": "^7.0.1"
+    "wait-on": "^7.0.1",
+    "yaml": "^2.2.0"
   }
 }
