Display better-formatted errors when API fails
Mainly handling 400 errors (server-side validation)

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
-    "format": "prettier --write \"src/**/*.{ts,tsx,json,md,css,scss}\"",
+    "format": "prettier --write \"src/**/*.{ts,tsx,json,md,css,scss}\" package.json docs/**/*.md cypress/**/*.{ts,json}",
     "generate-api": "npx @rtk-query/codegen-openapi ./src/app/services/openapi-config.json",
     "pree2e": "PORT=3000 BROWSER=none yarn start & wait-on http://localhost:3000",
     "e2e": "cypress run",
