--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "typescript": "^4.6.0",
     "utility-types": "^3.10.0",
     "web-vitals": "^2.1.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.1/xlsx-0.19.1.tgz",
     "yup": "^1.0.0-beta.8"
   },
   "scripts": {
