--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "yarn e2e // react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,md,css,scss}\" package.json docs/**/*.md cypress/**/*.{ts,json}",
