--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,3 +7,8 @@ rules:
   'prettier/prettier': warn
   'no-console': warn
   'import/no-default-export': error
+  # check for unused arguments (overriding extended rule)
+  '@typescript-eslint/no-unused-vars':
+    - warn
+    - args: after-used
+      ignoreRestSiblings: false
