Deploy the app to gh pages
- Add deploy script
- Add github workflow

Use https://github.com/rafgraph/spa-github-pages to fix client-side
routing

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.6",
     "dompurify": "^2.4.1",
+    "gh-pages": "^5.0.0",
     "leaflet": "^1.9.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -49,6 +50,8 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "yarn e2e // react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
