--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.6",
     "dompurify": "^2.4.1",
     "gh-pages": "^5.0.0",
+    "jspdf": "^2.5.1",
     "leaflet": "^1.9.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
