--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "leaflet": "^1.9.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-app-polyfill": "^3.0.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
